@@ -77,6 +77,7 @@
 #define GRUB_CS5536_MSR_DIVIL_LEG_IO_F_REMAP     0x04000000
 #define GRUB_CS5536_MSR_DIVIL_LEG_IO_UART1_COM1  0x00070000
 #define GRUB_CS5536_MSR_DIVIL_LEG_IO_UART2_COM3  0x00500000
+#define GRUB_CS5536_MSR_DIVIL_RESET 0x80000017
 #define GRUB_CS5536_MSR_DIVIL_IRQ_MAPPER_PRIMARY_MASK 0x80000024
 #define GRUB_CS5536_MSR_DIVIL_IRQ_MAPPER_LPC_MASK 0x80000025
 #define GRUB_CS5536_DIVIL_LPC_INTERRUPTS 0x1002
